v3.8.9 (XXXX-XX-XX)
-------------------

* Fix HTTP/VST traffic accounting in internal statistics / metrics.

* Delay a MoveShard operation for leader change, until the old leader has
  actually assumed its leadership and until the new leader is actually in sync.
  This fixes a bug which could block a shard under certain circumstances. This
  fixes BTS-1110.

* Updated arangosync to v2.13.0.

* Fixed issue #17291: Server crash on error in the PRUNE expression.
  Traversal PRUNE expressions containing JavaScript user-defined functions
  (UDFs) are now properly rejected in single server and cluster mode.
  PRUNE expressions that use UDFs require a V8 context for execution, which is
  not available on DB-servers in a cluster, and also isn't necessarily available
  for regular queries on single servers (a V8 context is only available if a
  query was executed inside Foxx or from inside a JS transaction, but not
  otherwise).

* Updated OpenSSL to 1.1.1s.

* Solve a case of excessive memory consumption in certain AQL queries with IN
  filters with very long lists. Free sub-iterators as soon as they are
  exhausted.

* BTS-1070: Fixed query explain not dealing with an aggregate function without
  arguments and the WINDOW node not being defined as an Ast node type name.

* Fixed error handling of coordinator commit of streaming transactions.
  This bug could mean that a streaming transaction is reported to be
  successfully committed when in reality it isn't.


v3.8.8 (2022-10-17)
-------------------

* Fixed BTS-852 (user's saved queries used to disappear after updating user
  profile).

* ES-1312: fix handling of reaching the WAL archive capacity limit.

* Changed the encoding of revision ids returned by the following REST APIs:
  - GET /_api/collection/<collection-name>/revision: the revision id was
    previously returned as numeric value, and now it will be returned as a
    string value with either numeric encoding or HLC-encoding inside.