@@ -1,7 +1,7 @@
 name: arangodb_client_connection_statistics_bytes_received
 introducedIn: "3.8.0"
 help: |
-  Bytes received for a request.
+  Bytes received for requests.
 unit: bytes
 type: histogram
 category: Statistics
